# jasmine

./: .gitignore  .gitmodules  README.md  dynamics.py  generate_dataset.py  generate_dataset_chunk.py  generate_dataset_gym.py  generate_dataset_gym_multi.py  generate_dataset_gym_single.py  genie.py  jasmine.py  pyproject.toml  requirements.txt  sample.py  sample_0.npz  train_dynamics.py  train_dynamics_get_sample.py  train_lam.py  train_lamap.py  train_tokenizer.py  train_tokenizer_single_sample.py
data/: pyproject.toml
data/jasmine_data/: __init__.py  detect_array_record_duplicates.py  detect_arrayrecord_duplicates.ipynb  utils.py
data/jasmine_data/ViZDoomPPO/: load_model_generate_dataset.py  train_ppo_parallel.py
data/jasmine_data/ViZDoomPPO/common/: envs.py
data/jasmine_data/ViZDoomPPO/logs/evaluations/deathmatch_simple/: evaluations.npz
data/jasmine_data/atari/: atari_utils.py  generate_atari_dataset.py  rainbow_no_sticky_actions.gin  visualize_array_record.py
data/jasmine_data/coinrun/: generat_coinrun_dataset_no_chunking.py  generat_coinrun_dataset_no_chunking_npy_arr_rec.py  generate_coinrun_dataset.py
data/jasmine_data/minatar/: generate_minatar_breakout_dataset.py
data/jasmine_data/minecraft/openai/: download_actions_files.py  download_videos.py
data/jasmine_data/vizdoom/: generate_vizdoom_dataset.py
input_pipeline/: download_openai_dataset.py  download_openai_index_files.sh  generate_atari_dataset.py  generate_breakout_dataset.py  generate_coinrun_dataset.py  pngs_to_array_records.py  preprocess_video_to_array_records.py  utils.py  (+2 more)
(+63 files in other folders)
